<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:id="@+id/accountTypeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:text="@string/account_type"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:visibility="visible"
        tools:text="account type"
        android:layout_marginTop="29dp"
        app:layout_constraintTop_toBottomOf="@+id/passwordConfirmationInput"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/passwordConfirmationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:text="@string/confirm_your_password"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:visibility="visible"
        tools:text="confirm your password"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/passwordConfirmationInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:ems="10"
        android:hint="@string/password_again"
        android:inputType="textPassword"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/passwordConfirmationLabel"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:text="@string/password"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@+id/usernameInput"
        tools:text="password"
        android:layout_marginStart="51dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/passwordLabel"
        android:layout_marginStart="51dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/usernameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:visibility="visible"
        tools:text="username"
        android:layout_marginStart="51dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="43dp" />

    <EditText
        android:id="@+id/usernameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:layout_marginTop="-3dp"
        app:layout_constraintTop_toBottomOf="@+id/usernameLabel"
        android:layout_marginStart="51dp"
        app:layout_constraintLeft_toLeftOf="parent" >
        <requestFocus/> <!-- sets initial focus to be on this field -->
    </EditText>

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@android:string/cancel"
        tools:text="@android:string/cancel"
        android:layout_marginStart="51dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="43dp"
        app:layout_constraintTop_toBottomOf="@+id/accountTypeRadioGroup" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        tools:text="@string/submit"
        android:layout_marginStart="51dp"
        app:layout_constraintLeft_toRightOf="@+id/cancelButton"
        android:layout_marginTop="43dp"
        app:layout_constraintTop_toBottomOf="@+id/accountTypeRadioGroup" />

    <RadioGroup
        android:id="@+id/accountTypeRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="51dp"
        tools:layout_editor_absoluteY="343dp"
        android:layout_marginStart="51dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accountTypeLabel" >

        <RadioButton
            android:id="@+id/adminRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/admin"
            tools:text="admin" />

        <RadioButton
            android:id="@+id/userRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user"
            tools:text="user" />
        
    </RadioGroup>

</android.support.constraint.ConstraintLayout>