...
            android:id="@+id/reg_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Dont have an account? " />

        <TextView
            android:id="@+id/text_registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/reg_message"
            android:clickable="true"
            android:text="Sign up"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

    </RelativeLayout>


...
